[package]
name = "brightsky-rs"
version = "0.1.0"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.3"