[package]
name = "brtsky"
version = "0.1.1"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
edition = "2018"
description = "A rusty parser for the Bright Sky weather API found at https://brightsky.dev"
repository = "https://github.com/bbmsoft/brtsky.git"
license = "MIT OR Apache-2.0"
keywords = ["weather", "json", "parser"]
categories = ["api-bindings"]

[badges]
travis-ci = { repository = "https://github.com/bbmsoft/brtsky.git", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4"

